allprojects {
    group = 'org.terra.incognita'
    version = '1.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_24
        targetCompatibility = JavaVersion.VERSION_24
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.+'
        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.+'
    }

    test {
        useJUnitPlatform()
    }
}